fix: fixing login and register form dark mode

--- a/front/cadastro_usuario/style.css
+++ b/front/cadastro_usuario/style.css
@@ -29,6 +29,7 @@ main {
 }
 
 form {
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-items: flex-start;
@@ -38,6 +39,10 @@ form {
     border: 1px solid black;
     border-radius: 0.5em;
     font-size: 1.8em;
+}
+
+form > div {
+    margin-top: 0.1em;
 }
 
 div {
@@ -102,5 +107,9 @@ img {
 }
 
 .dark-theme .image-container {
+    filter: invert(1);
+}
+
+.dark-theme form {
     filter: invert(1);
 }
